tinc-build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__exists__tests__exists_runtime_map.snap
---
source: tinc-build/src/codegen/cel/functions/exists.rs
expression: "postcompile::compile_str!(postcompile::config!\n{\n    test: true, dependencies:\n    vec![postcompile::Dependency::path(\"tinc\", \"../tinc\"),],\n}, quote!\n{\n    fn exists(input: &std::collections::HashMap<String, bool>) -> Result<bool,\n    ::tinc::__private::cel::CelError<'_>> { Ok(#output) } #[test] fn\n    test_contains()\n    {\n        assert_eq!(exists(&{\n            let mut map = std::collections::HashMap::new();\n            map.insert(\"value\".to_string(), true); map\n        }).unwrap(), true);\n        assert_eq!(exists(&{\n            let mut map = std::collections::HashMap::new();\n            map.insert(\"not_value\".to_string(), true); map\n        }).unwrap(), false);\n        assert_eq!(exists(&{\n            let mut map = std::collections::HashMap::new();\n            map.insert(\"xd\".to_string(), true);\n            map.insert(\"value\".to_string(), true); map\n        }).unwrap(), true);\n    }\n},)"
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in [ELAPSED]s
--- expanded
#![feature(prelude_import)]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
fn exists(
    input: &std::collections::HashMap<String, bool>,
) -> Result<bool, ::tinc::__private::cel::CelError<'_>> {
    Ok({
        let mut iter = ((input).keys()).into_iter();
        loop {
            let Some(item) = iter.next() else {
                break false;
            };
            if ::tinc::__private::cel::to_bool(
                ::tinc::__private::cel::CelValue::cel_eq(
                    ::tinc::__private::cel::CelValueConv::conv(item),
                    ::tinc::__private::cel::CelValue::String(
                        ::tinc::__private::cel::CelString::Borrowed("value"),
                    ),
                )?,
            ) {
                break true;
            }
        }
    })
}
